QA Issue #2 - Fixed top offset to display page title without getting cut off

--- a/wp-content/themes/reitlerlaw/style.css
+++ b/wp-content/themes/reitlerlaw/style.css
@@ -704,7 +704,7 @@ header.site-header {
 }
 
 .top-offset {
-  margin: 140px 0 0 0;
+  margin: 170px 0 0 0;
 }
 
 .banner-section-image {
